--- a/src/main/resources/template/java/smartHome/controller.vm
+++ b/src/main/resources/template/java/smartHome/controller.vm
@@ -3,8 +3,8 @@ package com.smart.home.controller.pc;
 import com.smart.home.dto.APIResponse;
 import com.smart.home.dto.IdListBean;
 import com.smart.home.dto.ResponsePageBean;
-import com.smart.home.modules.other.entity.${table.entityName};
-import com.smart.home.modules.other.service.${table.entityName}Service;
+import com.smart.home.modules.product.entity.${table.entityName};
+import com.smart.home.modules.product.service.${table.entityName}Service;
 import com.smart.home.util.UserUtils;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
