--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -180,6 +180,7 @@
 
         //头工具栏事件
         table.on('toolbar(${table.entityLowerCamel}-table)', function(obj) {
+            var that = this, data = obj.data;
             switch (obj.event) {
                 case 'add':
                     layer.open({
